gccida/c0/xmalloc_failed
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/xmalloc_failed/src/xmalloc.c:575:7: error: use of undeclared identifier 'arg0'
v1 = &arg0; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/xmalloc_failed/src/obj/xmalloc.o] Error 1
